--- a/card-slider-simple-example/src/main/res/layout/activity_login.xml
+++ b/card-slider-simple-example/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -99,7 +99,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView31"
@@ -112,7 +112,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             android:src="@mipmap/ic_action_name"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -127,7 +127,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView26"
             app:layout_constraintEnd_toStartOf="@+id/textView28"
@@ -156,7 +156,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView26"
             app:layout_constraintEnd_toStartOf="@+id/textView28"
@@ -169,7 +169,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView27"
             app:layout_constraintEnd_toStartOf="@+id/textView29"
@@ -182,7 +182,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView25"
             app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +195,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView34"
             app:layout_constraintEnd_toEndOf="parent"
@@ -209,7 +209,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView32"
             app:layout_constraintEnd_toStartOf="@+id/textView25"
@@ -222,7 +222,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView33"
             app:layout_constraintEnd_toStartOf="@+id/textView26"
@@ -235,7 +235,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView28"
             app:layout_constraintEnd_toEndOf="parent"
@@ -249,7 +249,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView29"
             app:layout_constraintEnd_toStartOf="@+id/textView24"
@@ -262,7 +262,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView30"
             app:layout_constraintEnd_toStartOf="@+id/textView23"
