--- a/card-slider-simple-example/src/main/res/layout/activity_tamirform.xml
+++ b/card-slider-simple-example/src/main/res/layout/activity_tamirform.xml
@@ -23,6 +23,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline14">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -138,7 +140,30 @@
                 android:layout_weight="0.75"
                 android:entries="@array/spareusage" />
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.25"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="توضیحات"
+                android:textAlignment="gravity" />
+
+            <EditText
+                android:id="@+id/comment"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:layout_weight="0.75"
+                android:background="@color/mb_gray"
+                android:ems="10"
+                android:inputType="textMultiLine" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
