--- a/card-slider-simple-example/src/main/res/layout/activity_verify_code.xml
+++ b/card-slider-simple-example/src/main/res/layout/activity_verify_code.xml
@@ -254,7 +254,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -267,7 +267,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView31"
@@ -280,7 +280,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             android:src="@mipmap/ic_action_name"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -295,7 +295,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView26"
             app:layout_constraintEnd_toStartOf="@+id/textView28"
@@ -324,7 +324,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView26"
             app:layout_constraintEnd_toStartOf="@+id/textView28"
@@ -337,7 +337,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView27"
             app:layout_constraintEnd_toStartOf="@+id/textView29"
@@ -350,7 +350,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView25"
             app:layout_constraintEnd_toEndOf="parent"
@@ -363,7 +363,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView34"
             app:layout_constraintEnd_toEndOf="parent"
@@ -377,7 +377,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView32"
             app:layout_constraintEnd_toStartOf="@+id/textView25"
@@ -390,7 +390,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView33"
             app:layout_constraintEnd_toStartOf="@+id/textView26"
@@ -403,7 +403,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView28"
             app:layout_constraintEnd_toEndOf="parent"
@@ -417,7 +417,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView29"
             app:layout_constraintEnd_toStartOf="@+id/textView24"
@@ -430,7 +430,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center_horizontal|center_vertical"
-            app:cb_color="#dddfe4"
+            app:cb_color="@color/colorPrimaryDark"
             app:cb_pressedRingWidth="8dip"
             app:layout_constraintBottom_toTopOf="@+id/textView30"
             app:layout_constraintEnd_toStartOf="@+id/textView23"
