--- a/card-slider-simple-example/src/main/res/layout/activity_first.xml
+++ b/card-slider-simple-example/src/main/res/layout/activity_first.xml
@@ -19,7 +19,24 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:menu="@menu/activity_main_drawer" />
+        android:fitsSystemWindows="true" >
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <include layout="@layout/navigation_view_header" />
+
+                <include layout="@layout/navigationview_list" />
+
+            </LinearLayout>
+
+        </ScrollView>
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
