--- a/card-slider-simple-example/src/main/res/layout/activity_item_forushgah.xml
+++ b/card-slider-simple-example/src/main/res/layout/activity_item_forushgah.xml
@@ -41,8 +41,7 @@
         app:layout_constraintBottom_toBottomOf="@id/guideline10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline14"
-        android:id="@+id/main_swipe">
+        app:layout_constraintTop_toBottomOf="@+id/guideline14">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
